# gotzi-probe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  web_server.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  FEATURES.md  PLAN.md  README.md  TIER3_ADVANCED.md
src/udp_probe/: __init__.py  __main__.py  main.py
src/udp_probe/api/: __init__.py  app.py
src/udp_probe/api/routers/: __init__.py  attack.py  honeypot.py  rules.py  security.py
src/udp_probe/api/routes/: alerts.py  capture.py  config_routes.py  dashboard.py  digest.py  discovery.py  scan.py
src/udp_probe/api/templates/: index.html
src/udp_probe/attack/: __init__.py  audit.py  flood.py  port_knock.py  replay.py  slowloris.py
src/udp_probe/capture/: __init__.py  live_sniffer.py  packet_store.py  probe_client.py  probe_server.py  sniffer.py
src/udp_probe/cli/: __init__.py  main.py
src/udp_probe/core/: __init__.py  config.py  database.py
src/udp_probe/digest/: __init__.py  analyzer.py
src/udp_probe/discovery/: __init__.py  discover_cli.py  runner.py
src/udp_probe/honeypot/: __init__.py  server.py
src/udp_probe/models/: __init__.py  alert.py  attack.py  capture.py  discovery.py  honeypot.py  rule.py  scan.py  security_finding.py
src/udp_probe/rules/: __init__.py  engine.py  service.py
src/udp_probe/scan/: __init__.py  scanner.py  security.py
src/udp_probe/ui/: __init__.py  tui.py  web_live.py
src/udp_probe/ui/web/: app.js  index.html  styles.css
web/: app.js  index.html  styles.css
