[tool.poetry]
name = "gotzi"
version = "0.1.0"
description = "Gotzi — Wireshark-like toolkit for security, scanning, and traffic analysis (one web UI + CLI)"
readme = "README.md"
authors = []
packages = [{ include = "udp_probe", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
click = "<8.2"
typer = "^0.12"
rich = "^13.7"
jinja2 = "^3.1"
python-multipart = "^0.0.12"
httpx = "^0.27"
textual = "^0.40"
pydantic = "^2.9"
pydantic-settings = "^2.6"
scapy = { version = "^2.5", optional = true }

[tool.poetry.extras]
pcap = ["scapy"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.7"

[tool.poetry.scripts]
gotzi = "udp_probe.main:app"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
